--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,8 +33,24 @@
           <h1>Air Quality</h1>
           <i class="fa-solid fa-wind"></i>
         </div>
-        
-        <h1 class="title">Sample System</h1>
+        <div class="options first-option">
+          <div class="box">
+            <i class="fa-solid fa-star"></i>
+            <h1 class="title">Sample System</h1>
+          </div>  
+        </div>
+        <div class="options">
+          <div class="box">
+            <i class="fa-solid fa-star"></i>
+            <h1 class="title">View Only</h1>
+          </div>  
+        </div>
+        <div class="options">
+          <div class="box">
+            <i class="fa-solid fa-star"></i>
+            <h1 class="title">View Only</h1>
+          </div>  
+        </div>
       </header>
       <!-- ----Content---- -->
       <section id="content">
